[package]
name = "basket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
env_logger = "0.10.0"
rkyv = "0.7.40"
bytecheck = "0.7.0"
basket_defs = { path = "../../packages/basket_defs" }
